--- a/report/report_v2.Rmd
+++ b/report/report_v2.Rmd
@@ -62,7 +62,7 @@ sink()
 
 # Abstract {.unnumbered}
 
-This study investigates the relationship between Environmental, Social, and Governance (ESG) performance and banking risk for European banks from 2020 to 2023. Using regulatory data from the European Banking Authority combined with ESG scores from LSEG Refinitiv, I employ complementary methodological approaches including panel data techniques with two-way fixed effects, quantile regression, and principal component analysis. The results reveal several important insights. First, while the overall ESG score shows limited association with risk metrics in fixed effects specifications, disaggregation into component pillars uncovers substantial heterogeneity in their effects. The social pillar consistently emerges as the most influential ESG dimension, exhibiting significant positive relationships with capital adequacy measures characterized by inverted U-shaped patterns. Second, quantile regression analysis demonstrates that ESG effects vary significantly across the risk distribution, with the strongest impact for banks in the lower to middle quantiles. Third, principal component analysis identifies underlying structures of ESG performance that extend beyond traditional environmental, social, and governance categorizations, suggesting strategic choices in sustainability approaches with different implications for bank risk profiles. These findings contribute to understanding how ESG factors influence banking stability and have implications for integrating sustainability considerations into both risk management practices and regulatory frameworks while acknowledging complex trade-offs between different ESG dimensions.
+This study examines the relationship between ESG performance and risk in European banks (2020-2023) using EBA regulatory data and LSEG Refinitiv ESG scores. Through panel data analysis with fixed effects, quantile regression, and principal component analysis, several findings emerge. While overall ESG scores show limited association with risk metrics, the social pillar proves most influential, exhibiting significant positive relationships with capital measures in inverted U-shaped patterns. ESG effects vary across the risk distribution, with strongest impact in lower to middle quantiles. PCA identifies ESG structures beyond traditional categorizations, revealing strategic sustainability approaches with different risk implications. These findings inform both risk management and regulatory frameworks.
 
 \newpage
 
